--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -28,37 +28,37 @@ services:
     profiles:
       - production
 
-  app-dev:
-    image: bolt-ai:development
-    build:
-      target: bolt-ai-development
-    environment:
-      - NODE_ENV=development
-      - VITE_HMR_PROTOCOL=ws
-      - VITE_HMR_HOST=localhost
-      - VITE_HMR_PORT=5173
-      - CHOKIDAR_USEPOLLING=true
-      - WATCHPACK_POLLING=true
-      - PORT=5173
-      - GROQ_API_KEY=${GROQ_API_KEY}
-      - HuggingFace_API_KEY=${HuggingFace_API_KEY}
-      - OPENAI_API_KEY=${OPENAI_API_KEY}
-      - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
-      - OPEN_ROUTER_API_KEY=${OPEN_ROUTER_API_KEY}
-      - MISTRAL_API_KEY=${MISTRAL_API_KEY}
-      - GOOGLE_GENERATIVE_AI_API_KEY=${GOOGLE_GENERATIVE_AI_API_KEY}
-      - VITE_LOG_LEVEL=${VITE_LOG_LEVEL:-debug}
-      - DEFAULT_NUM_CTX=${DEFAULT_NUM_CTX:-32768}
-      - RUNNING_IN_DOCKER=true
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
-    volumes:
-      - type: bind
-        source: .
-        target: /app
-        consistency: cached
-      - /app/node_modules
-    ports:
-      - "5173:5173"
-    command: pnpm run dev --host 0.0.0.0
-    profiles: ["development", "default"]
+  # app-dev:
+  #   image: bolt-ai:development
+  #   build:
+  #     target: bolt-ai-development
+  #   environment:
+  #     - NODE_ENV=development
+  #     - VITE_HMR_PROTOCOL=ws
+  #     - VITE_HMR_HOST=localhost
+  #     - VITE_HMR_PORT=5173
+  #     - CHOKIDAR_USEPOLLING=true
+  #     - WATCHPACK_POLLING=true
+  #     - PORT=5173
+  #     - GROQ_API_KEY=${GROQ_API_KEY}
+  #     - HuggingFace_API_KEY=${HuggingFace_API_KEY}
+  #     - OPENAI_API_KEY=${OPENAI_API_KEY}
+  #     - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
+  #     - OPEN_ROUTER_API_KEY=${OPEN_ROUTER_API_KEY}
+  #     - MISTRAL_API_KEY=${MISTRAL_API_KEY}
+  #     - GOOGLE_GENERATIVE_AI_API_KEY=${GOOGLE_GENERATIVE_AI_API_KEY}
+  #     - VITE_LOG_LEVEL=${VITE_LOG_LEVEL:-debug}
+  #     - DEFAULT_NUM_CTX=${DEFAULT_NUM_CTX:-32768}
+  #     - RUNNING_IN_DOCKER=true
+  #   extra_hosts:
+  #     - "host.docker.internal:host-gateway"
+  #   volumes:
+  #     - type: bind
+  #       source: .
+  #       target: /app
+  #       consistency: cached
+  #     - /app/node_modules
+  #   ports:
+  #     - "5173:5173"
+  #   command: pnpm run dev --host 0.0.0.0
+  #   profiles: ["development", "default"]
